Refine Lab 1 service layer