@@ -5,6 +5,7 @@ import com.app.igirepay.lab1.exception.InsufficientBalanceException;
 import com.app.igirepay.lab1.exception.InvalidAmountException;
 import com.app.igirepay.lab1.model.Account;
 import com.app.igirepay.lab1.model.Transaction;
+import com.app.igirepay.lab1.util.FileHandler;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -18,66 +19,93 @@ public class TransactionService {
     private final Set<String> processedReferenceIds = new HashSet<>();
     private final List<Transaction> transactionHistory = new ArrayList<>();
     private final List<String> failedTransactionLogs = new ArrayList<>();
+    private final FileHandler fileHandler;
+
+    public TransactionService() {
+        this(new FileHandler());
+    }
+
+    public TransactionService(FileHandler fileHandler) {
+        this.fileHandler = fileHandler == null ? new FileHandler() : fileHandler;
+    }
 
     public Transaction processDeposit(Account account, Transaction transaction)
             throws DuplicateTransactionException, InvalidAmountException {
-        validateAccountAndTransaction(account, transaction);
-        validateReferenceId(transaction.getReferenceId());
-        validateAmount(transaction.getAmount());
-
         try {
+            validateAccountAndTransaction(account, transaction);
+            validateReferenceId(transaction.getReferenceId());
+            validateAmount(transaction.getAmount());
+
             account.deposit(transaction.getAmount());
             recordSuccess(transaction);
             return transaction;
+        } catch (DuplicateTransactionException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
+        } catch (InvalidAmountException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
         } catch (IllegalArgumentException exception) {
-            logFailure(transaction, exception.getMessage());
+            recordFailure(transaction, exception.getMessage());
             throw new InvalidAmountException(exception.getMessage());
         }
     }
 
     public Transaction processWithdrawal(Account account, Transaction transaction)
             throws DuplicateTransactionException, InvalidAmountException, InsufficientBalanceException {
-        validateAccountAndTransaction(account, transaction);
-        validateReferenceId(transaction.getReferenceId());
-        validateAmount(transaction.getAmount());
-
         try {
+            validateAccountAndTransaction(account, transaction);
+            validateReferenceId(transaction.getReferenceId());
+            validateAmount(transaction.getAmount());
+
             boolean processed = account.withdraw(transaction.getAmount());
             if (!processed) {
-                logFailure(transaction, "Insufficient balance for withdrawal.");
+                recordFailure(transaction, "Insufficient balance for withdrawal.");
                 throw new InsufficientBalanceException("Insufficient balance for withdrawal.");
             }
 
             recordSuccess(transaction);
             return transaction;
+        } catch (DuplicateTransactionException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
+        } catch (InvalidAmountException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
         } catch (IllegalArgumentException exception) {
-            logFailure(transaction, exception.getMessage());
+            recordFailure(transaction, exception.getMessage());
             throw new InvalidAmountException(exception.getMessage());
         }
     }
 
     public Transaction processTransaction(Account account, Transaction transaction)
             throws DuplicateTransactionException, InvalidAmountException, InsufficientBalanceException {
-        validateAccountAndTransaction(account, transaction);
-        validateReferenceId(transaction.getReferenceId());
-        validateAmount(transaction.getAmount());
-
         try {
+            validateAccountAndTransaction(account, transaction);
+            validateReferenceId(transaction.getReferenceId());
+            validateAmount(transaction.getAmount());
+
             boolean processed = account.processTransaction(transaction);
             if (!processed) {
                 if (isDebitTransaction(transaction.getTransactionType())) {
-                    logFailure(transaction, "Insufficient balance for transaction.");
+                    recordFailure(transaction, "Insufficient balance for transaction.");
                     throw new InsufficientBalanceException("Insufficient balance for transaction.");
                 }
 
-                logFailure(transaction, "Transaction type is not supported for this account.");
+                recordFailure(transaction, "Transaction type is not supported for this account.");
                 throw new InvalidAmountException("Transaction type is not supported for this account.");
             }
 
             recordSuccess(transaction);
             return transaction;
+        } catch (DuplicateTransactionException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
+        } catch (InvalidAmountException exception) {
+            recordFailure(transaction, exception.getMessage());
+            throw exception;
         } catch (IllegalArgumentException exception) {
-            logFailure(transaction, exception.getMessage());
+            recordFailure(transaction, exception.getMessage());
             throw new InvalidAmountException(exception.getMessage());
         }
     }
@@ -105,7 +133,7 @@ public class TransactionService {
     }
 
     private void validateReferenceId(String referenceId) throws DuplicateTransactionException {
-        if (referenceId == null || referenceId.isBlank()) {
+        if (referenceId == null || referenceId.trim().isEmpty()) {
             throw new IllegalArgumentException("referenceId must not be blank");
         }
 
@@ -133,10 +161,13 @@ public class TransactionService {
     private void recordSuccess(Transaction transaction) {
         processedReferenceIds.add(transaction.getReferenceId());
         transactionHistory.add(transaction);
+        fileHandler.saveTransactionHistory(transaction);
     }
 
-    private void logFailure(Transaction transaction, String message) {
+    private void recordFailure(Transaction transaction, String message) {
         String referenceId = transaction == null ? "UNKNOWN" : transaction.getReferenceId();
-        failedTransactionLogs.add(referenceId + " - " + message);
+        String logEntry = referenceId + " - " + message;
+        failedTransactionLogs.add(logEntry);
+        fileHandler.saveFailedTransactionLogs(logEntry);
     }
 }
